--- a/pictoment/src/assets/main.css
+++ b/pictoment/src/assets/main.css
@@ -16,4 +16,9 @@
     display: grid;
     padding: 0 2rem;
   }
+
+  #guide {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+  }
 }
