--- a/pictoment/src/assets/main.css
+++ b/pictoment/src/assets/main.css
@@ -1,5 +1,7 @@
 @import './base.css';
 
+/* Viewing */
+
 #app {
   margin: auto;
   padding: 2rem;
@@ -16,9 +18,15 @@
     display: grid;
     padding: 0 2rem;
   }
-
-  #guide {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-  }
 }
+
+/* Palette */
+
+.col-op {
+  display: block;
+  border: 1px solid white;
+  margin: 0.5rem 0;
+  padding: 0.3rem;
+  max-width: 50%;
+}
+
