--- a/pictoment/src/assets/base.css
+++ b/pictoment/src/assets/base.css
@@ -1,14 +1,22 @@
 /* color palette from <https://github.com/vuejs/theme> */
+
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
   
   --con-bg: #ffffff;
+  --con-shade: rgba(196,187,223, 0.4);
   --con-shadow: rgba(31, 29, 85, 1);
-  --con-tab: rgba(196,187,223, 1);
+  --con-sec-shadow: rgba(196,187,223, 1);
 
+  --con-tab: rgba(165,210,255, 1);
+  --con-tab-sec: rgba(83,42,200, 1);
 
+  --con-icons: rgba(255,191,231,1);
+  
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
@@ -58,20 +66,8 @@ body {
     color 0.5s,
     background-color 0.5s;
   line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  font-size: 15px;
+  font-family: 'VT323', monospace;
+  font-size: 20px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
