style of grid adjusted and put on its own canvas to be toggled from view

--- a/pictoment/src/assets/base.css
+++ b/pictoment/src/assets/base.css
@@ -10,10 +10,10 @@
   --con-bg: #ffffff;
   --con-shade: rgba(196,187,223, 0.4);
   --con-shadow: rgba(31, 29, 85, 1);
-  --con-sec-shadow: rgba(196,187,223, 1);
+  --con-sec-shadow: rgba(196, 187, 223, 1);
 
   --con-tab: rgba(165,210,255, 1);
-  --con-tab-sec: rgba(83,42,200, 1);
+  --con-tab-sec: rgba(83, 42, 200, 1);
 
   --con-icons: rgba(255,191,231,1);
   
