--- a/pictoment/src/assets/main.css
+++ b/pictoment/src/assets/main.css
@@ -44,6 +44,7 @@
     -8px 0 0 -4px var(--con-sec-shadow), 
      4px 0 0 -2px var(--con-shadow),   
      8px 0 0 -4px var(--con-shadow); 
+  max-height: 95vh;
 }
 
 .tab:before {
@@ -113,8 +114,11 @@
 
 /* Canvas */
 
+.pixcanvas, .guide {
+  max-height: 80vh;
+}
+
 .pixcanvas {
-  position: relative;
   padding: 0.3rem;
   border-bottom: 3px solid var(--con-shade);
   border-top: 3px solid var(--con-shade);
@@ -127,7 +131,10 @@
 
 .guide {
   z-index: 1;
-  opacity: 0.5;
+  opacity: 0.3;
   padding: 0.3rem;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  pointer-events: none;
 }
 
