--- a/pictoment/src/assets/main.css
+++ b/pictoment/src/assets/main.css
@@ -44,7 +44,7 @@
     -8px 0 0 -4px var(--con-sec-shadow), 
      4px 0 0 -2px var(--con-shadow),   
      8px 0 0 -4px var(--con-shadow); 
-  max-height: 95vh;
+  max-height: 85vh;
 }
 
 .tab:before {
@@ -115,7 +115,7 @@
 /* Canvas */
 
 .pixcanvas, .guide {
-  max-height: 80vh;
+  max-height: 70vh;
 }
 
 .pixcanvas {
@@ -138,3 +138,70 @@
   pointer-events: none;
 }
 
+/* Taskbar */
+
+.taskbar {
+  position: fixed;
+  bottom: 2vh;
+  z-index: 200;
+}
+
+.taskbar::before {
+  content: '';
+  z-index: -1;
+  position: fixed;
+  background-color: var(--con-sec-shadow);
+  padding: 0.3rem;
+  margin: 0.1rem 0;
+  width: 100%;
+  height: 11vh;
+  bottom: -6vh;
+  left: 0;
+  border: solid 3.5px var(--con-shadow);
+  clip-path: polygon(
+    0px calc(100% - 35px),
+    5px calc(100% - 35px),
+    5px calc(100% - 25px),
+    10px calc(100% - 25px),
+    10px calc(100% - 15px),
+    15px calc(100% - 15px),
+    15px calc(100% - 10px),
+    25px calc(100% - 10px),
+    25px calc(100% - 5px),
+    35px calc(100% - 5px),
+    35px 100%,
+    calc(100% - 35px) 100%,
+    calc(100% - 35px) calc(100% - 5px),
+    calc(100% - 25px) calc(100% - 5px),
+    calc(100% - 25px) calc(100% - 10px),
+    calc(100% - 15px) calc(100% - 10px),
+    calc(100% - 15px) calc(100% - 15px),
+    calc(100% - 10px) calc(100% - 15px),
+    calc(100% - 10px) calc(100% - 25px),
+    calc(100% - 5px) calc(100% - 25px),
+    calc(100% - 5px) calc(100% - 35px),
+    100% calc(100% - 35px),
+    100% 35px,
+    calc(100% - 5px) 35px,
+    calc(100% - 5px) 25px,
+    calc(100% - 10px) 25px,
+    calc(100% - 10px) 15px,
+    calc(100% - 15px) 15px,
+    calc(100% - 15px) 10px,
+    calc(100% - 25px) 10px,
+    calc(100% - 25px) 5px,
+    calc(100% - 35px) 5px,
+    calc(100% - 35px) 0px,
+    35px 0px,
+    35px 5px,
+    25px 5px,
+    25px 10px,
+    15px 10px,
+    15px 15px,
+    10px 15px,
+    10px 25px,
+    5px 25px,
+    5px 35px,
+    0px 35px
+  );
+}
